=== WebCore-105 ===

2003-09-15  Ken as Darin  <darin@apple.com>

        Reviewed by Darin and Don.

        - fixed 3419957 -- REGRESSION: lines drawn across multiple columns at washingtonpost.com

        * khtml/rendering/render_box.cpp: (RenderBox::calcWidth): Always use the width of the line
        rather than the width of the containing block for "flow around floats" blocks (<hr>).
        This undoes half of the change made to fix bug 3384609.

2003-09-15  Darin Adler  <darin@apple.com>

        Reviewed by Ken and Don.

        - fixed 3417604 -- REGRESSION: dragging scroll thumb causes textarea contents to vanish

        * kwq/KWQTextArea.mm: (-[KWQTextArea initWithFrame:]): Deallocated cached graphics state for
        the text view as well as for the clip view.

2003-09-13  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3420547 -- REGRESSION: repro crash in khtml::RenderBlock::findNextLineBreak (wisdomtips.com)

        * khtml/rendering/render_block.cpp: (RenderBlock::addChildToFlow): Exclude BR elements when looking for
        an element to process first-letter style.

2003-09-13  Darin Adler  <darin@apple.com>

        * layout-tests/fast/frames/empty-frame-src-expected.txt: Updated test results that changed
        due to the change in our handling of frame borders.

=== WebCore-104 ===

2003-09-12  Richard Williamson   <rjw@apple.com>

	Fixed 3420097.  Pass flag up to WebKit indicating that redirects are being cancelled during a pending load.

        Reviewed by Darin.

        * khtml/khtml_part.cpp:
        (KHTMLPart::cancelRedirection):
        * khtml/khtml_part.h:
        * khtml/khtmlpart_p.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::provisionalLoadStarted):
        (KWQKHTMLPart::redirectionTimerStartedOrStopped):
        * kwq/WebCoreBridge.h:

=== WebCore-103 ===

2003-09-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.
